--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -2,7 +2,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* font-family: "Proxima Nova"; */
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -18,7 +20,7 @@
   height: 50px;
   background-color: #000;
   display: flex;
-  align-items:center;
+  align-items: center;
   justify-content: center;
   border-radius: 50%;
 }
@@ -42,24 +44,58 @@
 
 /* @media (max-width: 480px) {
   .nav {
-      padding: 0 5px;
-      height: 60px;
+    padding: 0 5px;
+    height: 60px;
   }
 
   .nav .logo {
-      width: 40px;
-      height: 40px;
+    width: 40px;
+    height: 40px;
   }
 
   .nav .logo span {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .nav .menu {
-      width: 20px;
-      height: 20px;
+    width: 20px;
+    height: 20px;
   }
 } */
+
+main {
+  margin: 10px;
+}
+
+header {
+  text-align: center;
+  margin-top: 40px;
+}
+
+#introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+  gap: 40px;
+}
+
+#introduction .lets-talk-btn {
+  width: 167px;
+  height: 54px;
+  border: none;
+  border-radius: 5px;
+  background-color: #4361ee;
+  color: white;
+  position: relative;
+}
+
+#introduction .lets-talk-btn img {
+  position: absolute;
+  margin-top: -2px;
+  margin-left: 5px;
+}
+
 .services-section {
   text-align: center;
   padding: 20px 10px;
@@ -79,7 +115,7 @@
 }
 
 .services-section h2 span::after {
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 3px;
@@ -98,12 +134,13 @@
 
 /* @media (max-width: 768px) {
   .services-container {
-      grid-template-columns: 1fr; /* Stack cards on smaller screens */
-  
+    grid-template-columns: 1fr; 
+} */
 
 .service-card {
   position: relative;
-  background: url('https://www.shutterstock.com/image-photo/teamwork-meeting-tablet-business-people-600nw-2251938325.jpg') center/cover no-repeat;
+  background: url("https://www.shutterstock.com/image-photo/teamwork-meeting-tablet-business-people-600nw-2251938325.jpg")
+    center/cover no-repeat;
   border-radius: 10px;
   overflow: hidden;
   color: #fff;
@@ -112,7 +149,7 @@
 }
 
 .service-card::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -172,7 +209,7 @@
 
 /* @media (max-width: 600px) {
   .services-container {
-      grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 } */
 .service-title-wrapper {
