Add style in the intro section

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* font-family: "Proxima Nova"; */
+  font-family: "Montserrat", serif;
 }
 
 .nav {
@@ -64,12 +64,13 @@
 } */
 
 main {
-  margin: 10px;
+  background-color: #e9f4ff;
+  height: 493px;
 }
 
 header {
   text-align: center;
-  margin-top: 40px;
+  padding-top: 40px;
 }
 
 #introduction {
@@ -77,23 +78,39 @@ header {
   flex-direction: column;
   align-items: center;
   margin-top: 30px;
+  margin-bottom: 60px;
   gap: 40px;
 }
 
-#introduction .lets-talk-btn {
+#introduction .lets-talk-link {
   width: 167px;
   height: 54px;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #4361ee;
   color: white;
   position: relative;
+  padding: 16px 34px 16px 34px;
+  font-weight: 700;
+  line-height: 21.92px;
+  text-decoration: none !important;
 }
 
-#introduction .lets-talk-btn img {
+#introduction .lets-talk-link img {
   position: absolute;
   margin-top: -2px;
   margin-left: 5px;
+}
+
+#introduction h2 {
+  margin-top: 30px;
+}
+
+#introduction p {
+  margin: 0 25px 0 25px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27.2px;
 }
 
 .services-section {
@@ -230,4 +247,9 @@ header {
   width: 28px; /* Set width for square */
   height: 28px; /* Set height for square */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow for a polished look */
+}
+
+span.underline-img {
+  border-bottom: solid;
+  border-image: url(../assets/vector-3.png) 30 stretch;
 }
