--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -156,8 +156,8 @@ header {
 
 .service-card {
   position: relative;
-  background: url("https://www.shutterstock.com/image-photo/teamwork-meeting-tablet-business-people-600nw-2251938325.jpg")
-    center/cover no-repeat;
+  background: url(../assets/icon/Rectangle\ 34625251.png)
+  center/cover no-repeat;
   border-radius: 10px;
   overflow: hidden;
   color: #fff;
@@ -172,7 +172,6 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
 
@@ -236,17 +235,17 @@ header {
 }
 
 .service-title-wrapper i {
-  font-size: 15px; /* Adjust the size of the icon */
+  font-size: 15px; /* size of the icon */
   color: #515151; /* Icon color */
-  background-color: #fff; /* White background */
-  border-radius: 5px; /* Slightly rounded corners */
-  padding: 10px; /* Padding inside the square */
+  background-color: #fff; 
+  border-radius: 5px; 
+  padding: 10px; 
   display: inline-flex; /* Centers the icon inside the square */
   justify-content: center;
   align-items: center;
-  width: 28px; /* Set width for square */
-  height: 28px; /* Set height for square */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow for a polished look */
+  width: 28px; 
+  height: 28px; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
 }
 
 #testemonial-section {
@@ -580,6 +579,11 @@ span.underline-img {
 .contact .icon {
   width: 20px;
   height: 20px;
-  margin-right: 10px; /* Space */
-  vertical-align: middle; /* Align icons with the middle of the text */
+  margin-right: 10px; /* space */
+  vertical-align: middle; /*  icons with the middle of the text */
+}
+.icon-image {
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
