--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,51 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", serif;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  padding: 0 20px;
+  background-color: #fff;
+}
+
+.nav .logo {
+  width: 50px;
+  height: 50px;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.nav .logo span {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.nav .menu {
+  width: 24px;
+  height: 24px;
+}
+
+.nav .menu svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
 h2 {
   color: #1a2630;
   font-weight: 700;
   font-size: 24px;
+  line-height: 40px;
 }
 
 .action-button {
