--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -1,50 +1,47 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: "Montserrat", serif;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100px;
-  padding: 0 20px;
-  background-color: #fff;
-}
-
-.nav .logo {
-  width: 50px;
-  height: 50px;
-  background-color: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-}
-
-.nav .logo span {
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.nav .menu {
-  width: 24px;
-  height: 24px;
-}
-
-.nav .menu svg {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
 header {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   padding-top: 50px;
+  margin-bottom: 60px;
+  gap: 40px;
   background-color: #e9f4ff;
+}
+
+header .action-button {
+  width: 167px;
+  height: 54px;
+  margin-bottom: 5px;
+  font-size: 17px;
+  font-weight: 700;
+  align-self: center;
+}
+
+header .pallets-image {
+  position: relative;
+  z-index: 2;
+}
+
+header .dotted-image {
+  position: absolute;
+  margin-top: -22px;
+  left: 44px;
+  z-index: 1;
+}
+
+header .introduction-image {
+  position: relative;
+}
+
+header .bright-background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  background: #e9f4ff;
+  width: 100%;
+  height: 245px;
+  margin-bottom: 30px;
 }
 
 #introduction-section {
@@ -53,49 +50,6 @@ header {
   align-items: center;
   margin-bottom: 60px;
   gap: 40px;
-}
-
-#introduction-section .bright-background {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-  background: #e9f4ff;
-  width: 100%;
-  height: 390px;
-  margin-bottom: 30px;
-}
-
-#introduction-section .action-button {
-  width: 167px;
-  height: 54px;
-  /* padding: 17px 34px; */
-  margin-top: 30px;
-  margin-bottom: 5px;
-  font-size: 17px;
-  font-weight: 700;
-  /* position: relative; */
-}
-
-/* #introduction-section .action-button img {
-  position: absolute;
-  margin-left: 7px;
-} */
-
-#introduction-section .introduction-image {
-  position: relative;
-}
-
-#introduction-section .introduction-image .pallets-image {
-  position: relative;
-  z-index: 2;
-}
-
-#introduction-section .dotted-image {
-  position: absolute;
-  top: -22px;
-  left: -16px;
-  z-index: 1;
 }
 
 #introduction-section h2 {
@@ -153,7 +107,7 @@ header {
 
 .service-card {
   position: relative;
-  background: url(../assets/icon/Rectangle\ 34625251.png) center/cover no-repeat;
+  background: url(../assets/icon/logo-design.png) center/cover no-repeat;
   border-radius: 10px;
   overflow: hidden;
   color: #fff;
