--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -107,7 +107,7 @@ header .bright-background {
 
 .service-card {
   position: relative;
-  background: url(../assets/icon/logo-design.png) center/cover no-repeat;
+  background: url(../assets/logo-design.png) center/cover no-repeat;
   border-radius: 10px;
   overflow: hidden;
   color: #fff;
@@ -202,6 +202,11 @@ header .bright-background {
   border-radius: 15px;
 }
 
+#testemonial-content .slider-left,
+#testemonial-content .slider-right {
+  display: none;
+}
+
 #testemonial-section .testemonial-text {
   display: flex;
   flex-direction: column;
@@ -238,50 +243,36 @@ header .bright-background {
   flex-direction: column;
   background: #e9f4ff;
   width: 100%;
-  height: 760px;
+  height: 775px;
   margin-bottom: 110px;
 }
 
 .contact-us {
   display: grid;
-  grid-template-areas: "icons info info";
+  grid-auto-flow: row;
   margin: 30px;
+  gap: 25px;
 }
 
-.contact-us .icons {
-  grid-area: icons;
-  display: flex;
-  flex-direction: column;
-  row-gap: 42px;
-  margin: 3px 0;
-  width: 0;
-}
-
-.contact-us .icons img {
+.contact-us .item .icon {
+  display: inline-block;
   background-color: #fff;
   padding: 8px;
   border-radius: 4px;
+  margin-right: 10px;
 }
 
-.contact-us .info {
-  grid-area: info;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  padding-top: 10px;
-  padding-left: 10px;
-}
-
-.contact-us .info p {
-  color: #4f5863;
-  font-size: 15px;
-}
-
-.contact-us .info .item h3 {
+.contact-us .item span {
   color: #1a2630;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 19px;
   margin-bottom: 12px;
+}
+
+.contact-us .item p {
+  margin-left: 52px;
+  color: #4f5863;
+  font-size: 15px;
 }
 
 #contact-form {
