--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,3 +1,7 @@
+.nav {
+  padding: 0 80px;
+}
+
 header {
   display: grid;
   text-align: center;
@@ -61,8 +65,25 @@ header .dotted-image {
   margin-top: 30px;
 }
 
+#introduction-section .introduction-image {
+  display: flex;
+  margin: 30px 100px;
+}
+
+#introduction-section .introduction-image img {
+  width: 400px;
+}
+
+#introduction-section .introduction-description {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+}
+
 #introduction-section p.first-paragraph {
   color: #1a2630;
+  width: 60%;
 }
 
 #introduction-section p {
@@ -104,7 +125,7 @@ header .dotted-image {
 
 .services-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   margin: 0 auto;
   max-width: 90%;
@@ -133,6 +154,22 @@ header .dotted-image {
 
 .service-card:nth-child(4) {
   background: url(../assets/digital-marketing.png) center/cover no-repeat;
+}
+
+.service-card:nth-child(5) {
+  background: url(../assets/content-writing.png) center/cover no-repeat;
+}
+
+.service-card:nth-child(6) {
+  background: url(../assets/email-marketing.png) center/cover no-repeat;
+}
+
+.service-card:nth-child(7) {
+  background: url(../assets/motion-design.png) center/cover no-repeat;
+}
+
+.service-card:nth-child(8) {
+  background: url(../assets/print-design.png) center/cover no-repeat;
 }
 
 .service-card::before {
@@ -233,7 +270,7 @@ header .dotted-image {
 
 #testemonial-section .testemonial {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   background-color: #f4f6fe;
   margin: 0 30px;
@@ -251,7 +288,7 @@ header .dotted-image {
 #testemonial-section .testemonial-text img {
   width: 38px;
   height: 31px;
-  align-self: center;
+  margin-left: 25px;
 }
 
 #testemonial-section .testemonial-text p {
@@ -274,18 +311,21 @@ header .dotted-image {
 
 #contact-us-section .bright-background {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background: #e9f4ff;
   width: 100%;
-  height: 735px;
-  margin-bottom: 140px;
+  height: 488px;
+  margin-bottom: 170px;
+  padding-top: 30px;
+  justify-content: center;
 }
 
 .contact-us {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   margin: 50px;
   gap: 25px;
+  align-content: center;
 }
 
 .contact-us .item .icon {
