--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -479,21 +479,26 @@ span.underline-img {
   border-bottom: solid;
   border-image: url(../assets/vector-3.png) 30 stretch;
 }
+
 .footer {
-  max-width: 1024px;
+  display: grid;
   width: 100%;
   padding: 20px;
-  background-color: #000000;
-  box-sizing: border-box;
+  gap: 10px;
+  background-color: #03071b;
+  grid-template-areas:
+    "icons contact explore newsletter"
+    "icons contact explore newsletter"
+    "icons contact explore newsletter"
+    "copyright copyright copyright copyright";
 }
 
-.footer .top {
+.footer .icons {
+  grid-area: icons;
   display: flex;
-  /* justify-content: space-between; */
-  /* border-bottom: 1px solid #444; */
+  flex-direction: column;
   padding-bottom: 20px;
   margin-bottom: 20px;
-  gap: 250px;
 }
 
 .footer .logo img {
@@ -504,7 +509,6 @@ span.underline-img {
 .footer .social-icons {
   display: flex;
   gap: 15px;
-  flex: 1;
   margin-left: 10px;
 }
 
@@ -515,9 +519,9 @@ span.underline-img {
 }
 
 .footer .newsletter {
+  grid-area: newsletter;
   display: flex;
   flex-direction: column;
-  flex: 1;
   max-width: 300px;
 }
 
@@ -552,18 +556,12 @@ span.underline-img {
   background-color: #0056b3;
 }
 
-.footer .bottom {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
 .footer .contact {
-  flex: 1;
   min-width: 200px;
   display: flex;
   flex-direction: column;
 }
+
 .footer .contact p {
   margin: 5px 0;
   display: flex;
@@ -571,7 +569,7 @@ span.underline-img {
 }
 
 .footer .explore {
-  flex: 1;
+  grid-area: explore;
   min-width: 200px;
   display: flex;
   flex-direction: column;
@@ -593,6 +591,7 @@ span.underline-img {
 }
 
 .footer .copyright {
+  grid-area: copyright;
   text-align: center;
   margin-top: 20px;
   font-size: 14px;
@@ -604,11 +603,13 @@ span.underline-img {
   flex-direction: column;
   gap: 15px;
 }
+
 .footer .newsletter p {
   font-size: 12px;
   color: #ffffff;
   margin-bottom: 10px;
 }
+
 .footer .newsletter p a {
   color: #ffffff;
   text-decoration: underline;
