--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -426,15 +426,13 @@ span.underline-img {
   text-align: left;
 }
 
-.footer .social-icons-container {
+.footer .icons {
   display: flex;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 20px;
 }
 
 .footer .social-icons {
   display: flex;
+  align-self: center;
   gap: 15px;
 }
 
