fix our services cards

--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -200,10 +200,7 @@ header .dotted-image {
   display: inline-flex;
   align-items: center;
   gap: 5px;
-  font-weight: bold;
   font-size: 0.9rem;
-  transition: color 0.3s ease;
-  margin-left: -12px;
 }
 
 .service-link:hover {
@@ -224,20 +221,21 @@ header .dotted-image {
   display: flex;
   align-items: center;
   gap: 10px; /* Space between icon and text */
+  margin-bottom: 15px;
 }
 
-.service-title-wrapper i {
-  font-size: 15px; /* size of the icon */
-  color: #515151; /* Icon color */
-  background-color: #fff;
-  border-radius: 5px;
-  padding: 10px;
-  display: inline-flex; /* Centers the icon inside the square */
-  justify-content: center;
-  align-items: center;
-  width: 28px;
-  height: 28px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.service-title-wrapper img {
+  position: relative;
+}
+
+.service-title-wrapper span {
+  margin: 0 0 10px;
+  position: absolute;
+  text-align: left;
+  margin-left: 40px;
+  margin-top: 3px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 #testemonial-section {
@@ -533,7 +531,7 @@ span.underline-img {
 .footer .newsletter input[type="email"] {
   padding: 10px;
   border: 1px solid #858585;
-  border-radius: 4px;
+  border-radius: 6px;
   margin-bottom: 10px;
   background: #000000;
   color: #fff;
@@ -562,6 +560,10 @@ span.underline-img {
   flex-direction: column;
 }
 
+.footer .contact h3 {
+  font-size: 18px;
+}
+
 .footer .contact p {
   margin: 5px 0;
   display: flex;
@@ -573,6 +575,10 @@ span.underline-img {
   min-width: 200px;
   display: flex;
   flex-direction: column;
+}
+
+.footer .explore h3 {
+  font-size: 18px;
 }
 
 .footer .contact p,
@@ -617,4 +623,10 @@ span.underline-img {
 
 .footer .newsletter p a:hover {
   text-decoration: none;
+}
+
+.icon-image {
+  background-color: white;
+  border-radius: 4px;
+  padding: 3px;
 }
