--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -156,10 +156,7 @@ header .bright-background {
   display: inline-flex;
   align-items: center;
   gap: 5px;
-  font-weight: bold;
   font-size: 0.9rem;
-  transition: color 0.3s ease;
-  margin-left: -12px;
 }
 
 .service-link:hover {
@@ -180,20 +177,21 @@ header .bright-background {
   display: flex;
   align-items: center;
   gap: 10px; /* Space between icon and text */
+  margin-bottom: 15px;
 }
 
-.service-title-wrapper i {
-  font-size: 15px; /* size of the icon */
-  color: #515151; /* Icon color */
-  background-color: #fff;
-  border-radius: 5px;
-  padding: 10px;
-  display: inline-flex; /* Centers the icon inside the square */
-  justify-content: center;
-  align-items: center;
-  width: 28px;
-  height: 28px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.service-title-wrapper img {
+  position: relative;
+}
+
+.service-title-wrapper span {
+  margin: 0 0 10px;
+  position: absolute;
+  text-align: left;
+  margin-left: 40px;
+  margin-top: 3px;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 #testemonial-section {
@@ -428,6 +426,7 @@ span.underline-img {
 
 .footer .icons {
   display: flex;
+  margin-bottom: 20px;
 }
 
 .footer .social-icons {
@@ -477,9 +476,14 @@ span.underline-img {
   width: calc(100% - 20px);
   padding: 10px;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 6px;
   margin-bottom: 10px;
   background-color: #03071b;
+}
+
+.footer .newsletter p {
+  color: #f5f5f5;
+  font-size: 13px;
 }
 
 .footer .newsletter .action-button {
@@ -506,6 +510,14 @@ span.underline-img {
   color: #f5f5f5;
 }
 
+.footer .contact h3 {
+  font-size: 18px;
+}
+
+.footer .contact p img {
+  margin-right: 10px;
+}
+
 .footer a,
 .footer h3,
 .footer .copyright,
@@ -526,6 +538,7 @@ span.underline-img {
 
 .footer .explore h3 {
   margin-bottom: 12px;
+  font-size: 18px;
 }
 
 .footer .explore a {
@@ -562,5 +575,5 @@ span.underline-img {
 .icon-image {
   background-color: white;
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 3px;
 }
