--- a/CSS/tablet.css
+++ b/CSS/tablet.css
@@ -542,7 +542,8 @@ span.underline-img {
   border-radius: 6px;
   cursor: pointer;
   width: 150px;
-  margin-top: 5px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .footer .newsletter button:hover {
@@ -553,6 +554,7 @@ span.underline-img {
   min-width: 200px;
   display: flex;
   flex-direction: column;
+  gap: 14px;
 }
 
 .footer .contact h3 {
@@ -570,6 +572,7 @@ span.underline-img {
   min-width: 200px;
   display: flex;
   flex-direction: column;
+  gap: 10px;
 }
 
 .footer .explore h3 {
@@ -594,7 +597,7 @@ span.underline-img {
 .footer .copyright {
   grid-area: copyright;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 25px;
   font-size: 14px;
   color: white;
 }
